tests/ui/rfcs/rfc-2632-const-trait-impl/const_derives/derive-const-with-params.stderr
error: const `impl` for trait `PartialEq` which is not marked with `#[const_trait]`
  --> $DIR/derive-const-with-params.rs:6:16
   |
LL | #[derive_const(PartialEq)]
   |                ^^^^^^^^^ in this derive macro expansion
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: in this expansion of `#[derive(PartialEq)]`
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/derive-const-with-params.rs:6:16
   |
LL | #[derive_const(PartialEq)]
   |                ^^^^^^^^^ in this derive macro expansion
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: in this expansion of `#[derive(PartialEq)]`

error: aborting due to 2 previous errors

